--- a/css/estilo.css
+++ b/css/estilo.css
@@ -595,13 +595,18 @@ element.style {
     flex-direction: column;
     align-items: center;
 }
-.row>* {
-    margin: 1rem;
-    padding-right: calc(var(--bs-gutter-x) * .5);
-    padding-left: calc(var(--bs-gutter-x) * .5);
-    margin-top: var(--bs-gutter-y);
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    padding-right: 4rem;
 }
-
+.tarjetas__zoo{
+    margin-left: -7rem;
+}
 
 /*--------------------media queries/alojamiento--------------*/
     .h2, h2 {
